elements/pf-background-image/pf-background-image.css
:host {
  display: flex;

  --_background-image: var(--pf-c-background-image--BackgroundImage);
  --_background-image-2x: var(--pf-c-background-image--BackgroundImage-2x);
  --_background-image-sm: var(--pf-c-background-image--BackgroundImage--sm);
  --_background-image-sm-2x: var(--pf-c-background-image--BackgroundImage--sm-2x);
  --_background-image-lg: var(--pf-c-background-image--BackgroundImage--lg);
}

#container {
  padding: 0;
  margin: 0;
  background-color: transparent;
}

#container::after {
  display: block;
  position: fixed;
  top:  0;
  left: 0;
  z-index: -1;
  width: 100%;
  height: 100%;
  content: "";
  background-color: var(--pf-c-background-image--BackgroundColor, var(--pf-global--BackgroundColor--dark-100, #151515));
  background-image: var(--_background-image);
  filter: var(--pf-c-background-image--Filter, url("#filter"));
  background-repeat:  no-repeat;
  background-size: cover;
}

slot[name="filter"] {
  display: none;
}

slot[part="content"] {
  display: block;
  position: relative;
  z-index: 1;
  color: white;
}

@media screen and (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
  #container::after {
    --_background-image: var(--_background-image-2x);
  }
}

@media screen and (min-width: 576px) {
  #container::after {
    --_background-image: var(--_background-image-sm);
  }
}

@media screen and (min-width: 576px) and (-webkit-min-device-pixel-ratio: 2), (min-width: 576px) and (min-resolution: 192dpi) {
  #container::after {
    --_background-image: var(--_background-image-sm-2x);
  }
}

@media screen and (min-width: 992px) {
  #container::after {
    --_background-image: var(--_background-image-lg);
  }
}

